--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -1240,12 +1240,12 @@
     "    img_soup = soup(html, 'html.parser')\n",
     "    # Retrieve the full size image\n",
     "    img_url_rel = img_soup.find('img', class_=\"wide-image\").get('src')\n",
-    "    img_url = f'https://marshemispheres.com/{hemi_img_url_rel}'\n",
+    "    img_url = f'https://marshemispheres.com/{img_url_rel}'\n",
     "    #Retrieve title\n",
     "    title = img_soup.find(\"h2\", class_=\"title\").get_text()\n",
     "    # Define and append to the dictionary\n",
     "    hemisphere_dict = {'title': title, 'img_url': img_url,}\n",
-    "    hemisphere_image_urls.append(hemi_dict)\n",
+    "    hemisphere_image_urls.append(hemisphere_dict)\n",
     "    #Go back to main page\n",
     "    browser.back()\n",
     "    \n",
